[package]
name = "logic_circuit_simulator"
version = "0.1.0"
authors = ["remtori <lqvu99@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lcs"
path = "src/main.rs"

[dependencies]
bitvec = "0.20"
cfg-if = "1.0.0"
console_log = { version = "0.2", optional = true }
log = "0.4"
serde = "1.0.123"
simplelog = "0.7.6"
wasm-bindgen = "0.2.70"

[features]
wasm = ["console_log"]
